[tool.poetry]
name = "test-case"
version = "0.1.0"
description = ""
authors = ["Aleksandr Klokov <klokov55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pydub = "^0.25.1"
vosk = "^0.3.45"
soundfile = "^0.12.1"
numpy = "^2.1.3"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
